--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.6.2",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "cookie": "^0.5.0",
     "core-js": "^3.8.3",
