--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie": "^0.5.0",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "nodejs": "^0.0.0",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
